--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "recorder-js": "^1.0.7",
     "tailwindcss": "^3.4.17",
     "zod": "^3.24.1"
   },
