--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
-    "start": "nodemon server.js"
+    "dev": "node index.js",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
